style(alignment): fix results card alignment to be centered

--- a/css/components/_result.scss
+++ b/css/components/_result.scss
@@ -1,5 +1,4 @@
 .result {
-  max-width: 25rem;
   max-height: 23rem;
   height: 100%;
   border: 1px solid rgba(0, 0, 0, 0.25);
