--- a/css/layouts/_responsiveness.scss
+++ b/css/layouts/_responsiveness.scss
@@ -1,6 +1,6 @@
 .even-columns {
   gap: 1.5rem;
-  grid-auto-columns: .975fr 1.1fr;
+  grid-auto-columns: 0.975fr 1.1fr;
 }
 
 .container {
@@ -28,6 +28,10 @@
 }
 
 @media screen and (min-width: 50em) {
+  .results {
+    max-width: 25rem;
+  }
+
   .even-columns {
     grid-auto-flow: column;
     place-items: center;
