--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,6 @@ section.results {
 }
 
 .result {
-  max-width: 25rem;
   max-height: 23rem;
   height: 100%;
   border: 1px solid rgba(0, 0, 0, 0.25);
@@ -120,6 +119,9 @@ section.results {
   }
 }
 @media screen and (min-width: 50em) {
+  .results {
+    max-width: 25rem;
+  }
   .even-columns {
     grid-auto-flow: column;
     place-items: center;
